# pyFontAwesome47

./: .gitignore  README.md  gen_icons.py  pyproject.toml  setup.cfg
src/fontawesome47/: __init__.py  icons.py  icons_bytes.py  icons_str.py
tests/: test_font.py
