[metadata]
name= fontawesome47
url= https://ousttrue.github.io/pyFontAwesome47/
project_url=
    source= https://github.com/ousttrue/pyFontAwesome47/
description= Font Awesome-4.7 for python desktop usage
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: SIL Open Font License 1.1 (OFL-1.1)
include_package_data = True

[options]
package_dir=
    =src
packages=find:

[options.package_data]
fontawesome47 = fonts/*.ttf
